# xls_to_ass

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  xls_to_ass.py
src/: main.py  xls_to_ass.py
