[project]
name = "xls_to_ass"
version = "0.1.0"
description = "Converts XLS to ASS"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet",
  "ass",
  "openpyxl",
  "xlrd"
]

[tool.flet]
org = "com.mycompany"
product = "MyApp"
company = "My Company"
copyright = "Copyright (C) 2025 by My Company"
app.module = "main"

[tool.flet.app]
path = "src"